[gd_scene load_steps=8 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://gfx/background.png" type="Texture" id=2]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.835294, 0.172549, 0.172549, 1 )
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=2]
script/source = "extends Node

export var prompt = [\"\",\"\",\"\"]
export var story = \"\"

func _ready():
	pass
"

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -30.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -4.50001
margin_top = -27.0
margin_right = 1015.5
margin_bottom = 669.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.5
margin_top = 257.5
margin_right = 6.5
margin_bottom = 237.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 974.0
margin_bottom = 49.0

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 921.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 925.0
margin_right = 974.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 974.0
margin_bottom = 353.0
rect_min_size = Vector2( 500, 300 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.027451, 0.219608, 0.0862745, 1 )
text = "ask me anythin
"
autowrap = true

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = SubResource( 2 )
story = "This is a story0"

[node name="Story1" type="Node" parent="StoryBook"]
script = SubResource( 2 )
story = "This is a story1"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
